# libseedy

./: .gitignore  DOS_RAND.C  DOS_SEED.C  INSTALL  INSTALL.md  LICENSE  Makefile  README  README.md  README.txt  config.h  configure.ac  configure~  genmt16  genmt16.c  genmt32  genmt32.c  genqxo16  genqxo16.c  genqxo32  genqxo32.c  genqxo64  genqxo64.c  libicm.c  libicm.h  libseed.c  mt16.c  mt16.h  mt32.c  mt32.h  mtwist.c  mtwist.h  next_prime.c  prime  prime.c  prime.h  primes16.inc  primes32.inc  primes8.inc  qxo16.c  (+17 more)
BE/: README.txt
src/: DOS_RAND.C  Makefile.am  README.md  TODO.txt  bench  bench.c  bspec32  bspec32.c  commands.db  common.c  common.h  config.h  ftime.c  ftime.h  genmt16  genmt32  genmt32.c  genqx16  genqx16.c  genqx32  genqx32.c  genqx64.c  genss64  genss64.c  gensy16  gensy16.c  gensy32  gensy32.c  gensy64  gensy64.c  hex  hex.c  icmgen  icmgen.c  icmstat  icmstat.c  keep.c  libicm.c  libicm.h  libseedy16.c  (+83 more)
src/DOS/: GENMTDOS.C  GENSYDOS.C
src/Linux/: Makefile  randmap_driver.c
src/NetBSD/: noise_dev_skel.c  noise_dev_skel.h
src/fastrand/: fastrand.c
src/help/: algorithms.md  commands.md  install.md  testing.md
src/libcrypto/: .clang-format  .gitignore  CODE_OF_CONDUCT.md  Objects.mk
src/libcrypto/include/: libcrypto.h
src/libcrypto/src/: main.c
src/libcrypto/src/AES/: AES_encrypt.c  AES_encrypt_test.c
src/libcrypto/src/AES/context/: AES_context_test.c
src/libcrypto/src/AES/context/include/: AES_context.h
src/libcrypto/src/AES/include/: AES.h  AES_constants.h  AES_test.h
src/libcrypto/src/AES/round/: AES_round_test.c
src/libcrypto/src/ChaCha/: ChaCha_constants.c  ChaCha_decrypt.c  ChaCha_decrypt_test.c  ChaCha_test.c
src/libcrypto/src/ChaCha/context/: ChaCha_context.c
src/libcrypto/src/ChaCha/include/: ChaCha.h  ChaCha_constants.h  ChaCha_test.h
src/libcrypto/src/ChaCha/round/: ChaCha_round_test.c
src/libcrypto/src/cipher/: cipher.c  cipher_common.c  cipher_encrypt.c
src/libcrypto/src/cipher/include/: cipher.h  cipher_test.h
src/libseedy/: common.h  libseedy16.h  libseedy32.h  libseedy64.h  pstdint.h
src/shishua/: shishua.h
src/tools/: README.md  gencc2032  gencc2032.c  gencc32.c  gencc832  gencc832.c  genmt32  genmt32.c  gennm64.c  gennm80.c  genqx16  genqx16.c  genqx32  genqx32.c  genqx64  genqx64.c  genss64.c  gensy16  gensy16.c  gensy32  gensy32.c  gensy64  gensy64.c  goodprimes.c  nprime16.c  nprime32.c  nprime64.c  prime32.h  prime64.h  qx16.h  qx32.h  qx64.h  seedy.c  sycc2032.c  sycc20qx32.c  syccqx32.c  syccqx64.c  symt32.c  symtqx32.c  symtqx64.c  (+5 more)
src/tools/algos/: README.md  algorithms.md  cc2032.h  cc32.h  cc832.h  mt32.h  nm64.h  nm80.h  prime16.h  prime32.h  prime64.h  prime64sub16.h  qx16.h  qx32.h  qx64.h  ss64.h
src/tools/algos/ChaCha20/: ChaCha20.h
src/tools/algos/chacha8/: chacha8.h  ecrypt-sync.h
src/tools/algos/libcrypt/libcrypto/: README.md
src/tools/algos/libcrypto/: DefaultComponent.mk
src/tools/algos/shishua/: shishua.h
src/tools/mtwister/: mtwister.c  mtwister.h
(+143 files in other folders)
