bin_PROGRAMS = seed bspec32 sleepinfo trim bench void hex

seeddir = ./
seed_SOURCES = seed.c libicm.c
seed_HEADERS = libicm.h primes.txt primes.large.txt config.h

bspec32dir = ./
bspec32_SOURCES = bspec32.c libstat.c ftime.c
bspec32_HEADERS = stat.h ftime.h config.h

sleepinfodir = ./
sleepinfo_SOURCES = sleepinfo.c ftime.c libstat.c
sleepinfo_HEADERS = ftime.h stat.h config.h

trimdir = ./
trim_SOURCES = trim.c
trim_HEADERS = config.h

voiddir = ./
void_SOURCES = void.c
void_HEADERS = config.h

hexdir = ./
hex_SOURCES = hex.c
hex_HEADERS = config.h

benchdir = ./
bench_SOURCES = bench.c ftime.c
bench_HEADERS = ftime.h config.h

LIBS = -lpthread
