bin_PROGRAMS = seed bspec32 sleepinfo keep bench void hex prng

seeddir = ./
seed_SOURCES = seed.c libicm.c
seed_HEADERS = libicm.h primes.txt primes.large.txt config.h

bspec32dir = ./
bspec32_SOURCES = bspec32.c libstat.c ftime.c
bspec32_HEADERS = stat.h ftime.h config.h

sleepinfodir = ./
sleepinfo_SOURCES = sleepinfo.c ftime.c libstat.c
sleepinfo_HEADERS = ftime.h stat.h config.h

keepdir = ./
keep_SOURCES = keep.c
keep_HEADERS = config.h

prngdir = ./
prng_SOURCES = prng.c
prng_HEADERS = config.h

voiddir = ./
void_SOURCES = void.c
void_HEADERS = config.h

hexdir = ./
hex_SOURCES = hex.c
hex_HEADERS = config.h

benchdir = ./
bench_SOURCES = bench.c ftime.c
bench_HEADERS = ftime.h config.h

LIBS = -lpthread
